--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,12 @@
     background-color:#2F4F4F;
     border-radius: 50px;
     color:white;
-    margin:50px;
-    padding:50px;
+    margin:17%;
+    /* padding:50px; */
     
 }
+
+
 
 #formulaire_content{
     display:flex;
@@ -37,22 +39,30 @@ border-radius: 50px;
 color:white; */
 /* margin:50px; */
 /* padding:50px; */
-} */
+}
 
-#title{
+#title h1{
     color:white;
 
 }
 
 input{
     border-radius:10px;
+    padding:2%;
     width:100%;
 }
 
 textarea{
     border-radius: 10px;
+    padding:2%;
+    width:100%;
 }
 
+#errormessage{
+    display:flex;
+    align-items: flex-start;
+    
+}
 
 .bouton{
     margin:10px;
@@ -64,7 +74,10 @@ textarea{
     border-radius: 10px;
 }
 
-#error{
-    color:red;
+span {
+    background-color:red;
 }
+
+
+
 
